# rtd-sphinx-test

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  requirements.txt  tabs_test.rst  tikz_test.rst
docs/tikz/: cs-spherical-elevation.tex  cs-spherical-polar.tex  ctrl-loop.tex  cube1.tex  cube2.tex  physics-problem.tex  the-3dplot-package.tex
