# -*- coding: utf-8 -*-

[metadata]
name = rtd-sphinx-test
version = 0.1
description = Sandbox for learning ReadTheDocs structure.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = open, source, sphinx, readthedocs, test
author = AMV
author_email = someone@nowhere.com
project_urls =
    main = 
license = MIT
# Classifiers from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Desktop Environment :: Gnome
    Topic :: Desktop Environment :: K Desktop Environment (KDE)

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    autopep8

[options.packages.find]
exclude = tests*

[options.extras_require]
docs =
    sphinx>=4.4.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-tikz>=0.4.15
